ymlkube/environment-variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer
  labels:
    name: nodejs-writer
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - name: nodejs-writer
    image: aureezzhenx/nodejs-writer
    volumeMounts:
    - mountPath: /app/aureezzhenx
