ymlkube/nginx-with-anotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-anotation
  labels:
    team: joji
  annotations:
    description: joji belajar kube
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
