ymlkube/multi-container-pod.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 80
    name: nginx
  - port: 3000
    targetPort: 3000
    name: nodejs-web

---

# Service Load Balancer

apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer-frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend ## Selector label dari Pod NGINX line 16
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-curl
  labels:
    name: nginx-curl
spec:
  containers:
  - name: nginx-curl
    image: aureezzhenx/nginx-curl
