ymlkube/service-nginx-loadbalancer.yaml

# Service Load Balancer

apiVersion: v1
kind: Service
metadata:
  name: service-nginx-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx ## Selector label dari Pod NGINX line 16
  ports:
    - port: 80
      targetPort: 80
