ymlkube/service-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: nginx ## Selector label dari Pod NGINX line 16
  ports:
  - port: 8080 ## Target port buat Services
    targetPort: 80 ## Target port nembak dari pod NGINX

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-curl
spec:
  containers:
    - name: nginx-curl
      image: aureezzhenx/nginx-curl
      ports:
        - containerPort: 80
