ymlkube/sharing-volume.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    name: nginx
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30001
