ymlkube/service-nginx-ingress.yaml

## Service NGINX

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: nginx ## Selector label dari Pod NGINX line 16
  ports:
  - port: 8080 ## Target port buat Services
    targetPort: 80 ## Target port nembak dari pod NGINX

---

# Ingress NGINX

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: k8s.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 80
